@@ -1,11 +1,15 @@
                                                          -*- coding: utf-8 -*-
 
+<<<<<<< .working
 Changes with Apache 2.4.3
 
   *) SECURITY: CVE-2012-2687 (cve.mitre.org)
      mod_negotiation: Escape filenames in variant list to prevent an
      possible XSS for a site where untrusted users can upload files to
      a location with MultiViews enabled. [Niels Heinen <heinenn google.com>]
+
+  *) core: Add the port number to the vhost's name in the scoreboard.
+     [Stefan Fritsch]
 
   *) mod_proxy: Fix ProxyPassReverse for balancer configurations.
      PR 45434.  [Joe Orton]
